@@ -1,4 +1,8 @@
 
+Version Next
+
+    - Added SocketAcceptor
+
 Version 1.0.189 Released Dec 16, 2011
 
     - Removed obsolete WebContextApplicationServlet
